--- a/search.html
+++ b/search.html
@@ -115,7 +115,7 @@ on this site but will rather search the entire Web.
 <FORM method=GET action="http://www.google.com/search">
 <TABLE bgcolor="#FFFFFF"><tr><td>
 <A HREF="http://www.google.com/">
-<IMG SRC="http://www.google.com/logos/Logo_40wht.gif" border="0" 
+<IMG SRC="https://www.google.com/logos/Logo_40wht.gif" border="0" 
  ALT="Google" align="absmiddle"></A>
 <INPUT TYPE=text name=q size=25 maxlength=255 value="">
 <INPUT type=submit name=btnG VALUE="Google Search">
